--- a/src/app/pages/main-form-content/sub-pages/calculation-loan-page/components/owner/owner.component.scss
+++ b/src/app/pages/main-form-content/sub-pages/calculation-loan-page/components/owner/owner.component.scss
@@ -1,12 +1,13 @@
 .owner-container {
   padding: 30px;
   width: 75vw;
-  min-height: 80vh;
+  height: 100%;
   background: #ffffff;
   box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
   border-radius: 30px;
   display: flex;
   flex-direction: column;
+  overflow: wrap;
 }
 
 .owner-title {
@@ -46,6 +47,7 @@
 .owner-products {
     display: flex;
     gap: 80px;
+    margin-bottom: 20px;
 }
 
 .owner-products-item {
@@ -70,6 +72,7 @@
         color: #343e48;
     }
   }
+
 
   .owner-previous-products {
     width: 100%;
@@ -116,12 +119,11 @@
   }
 
   .owner-personal-information-container {
-    width: 100%;
-    height: 70vh;
+    min-width: 100%;
+    height: 100vh;
 
     .personal-information-title {
         margin-top: 35px;
-
         margin-bottom: 35px;
         width: 100%;
         height: 3vh;
@@ -135,9 +137,9 @@
   }
   .owner-personal-information {
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    gap: 10px;
+    column-gap: 20px;
+    margin-top: 20px;
 
     &-title {
       font-style: normal;
@@ -149,8 +151,27 @@
 
     &-content {
       display: flex;
-      gap: 40px;
+      align-items: flex-end;
+      column-gap: 20px;
+      row-gap: 10px;
       flex-wrap: wrap;
+    }
+
+    &-button {
+      width: 213px;
+      height: 52px;
+      background: #343E48;
+      border-radius: 6px;
+      color: #FFFFFF;
+    }
+  }
+
+  .family {
+    flex-direction: column;
+    justify-content: flex-end;
+
+    &-content {
+      column-gap: 400px
     }
   }
 
@@ -230,5 +251,47 @@
         }
       }
     }
+  }
+
+  .marital-status {
+    display: flex;
+    flex-direction: column;
+
+    &__title {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 22px;
+        line-height: 130%;
+        color: #343e48;
+      }
+
+    &__list {
+        display: flex;
+        flex-wrap: nowrap;
+        gap: 10px;
+        min-width: 70%;
+
+      &--button {
+        padding: 10px 10px;
+        background: #f2f4f7;
+        color: #343e48;
+        border-radius: 20px;
+      }
+    }
+  }
+
+  .policy-confirmation {
+    width: 300px;
+    
+    &-content {
+      display: flex;
+      column-gap: 50px;
+    }
+
+    &-container {
+      display: flex;
+      justify-content: space-between;
+    }
+
   }
   
