--- a/src/app/shared/components/input-clearer/input-clearer.component.html
+++ b/src/app/shared/components/input-clearer/input-clearer.component.html
@@ -1,14 +1,11 @@
 <form [formGroup]="inputClearedForm">
-    <label class="form-group__item--label" for="clearedInput">
-        ФИО
-    </label>
-    <div class="clearer-container">
+  <label class="form-group__item--label" for="clearedInput"> ФИО </label>
+  <div class="clearer-container">
     <input
       id="clearedInput"
       type="text"
       class="form-group__item--input"
       formControlName="inputClearer"
-      (change)="changeValue(inputClearedForm.value)"
     />
     <input
       type="button"
@@ -16,5 +13,5 @@
       class="clearer-container__clear button"
       (click)="clearInputValue()"
     />
-    </div>
-  </form>
+  </div>
+</form>
