--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -71,3 +71,10 @@ h4 {
   font-size: inherit;
   font-weight: inherit;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
