--- a/src/app/auth/broker-auth-page/components/auth-broker-id-form/auth-broker-id-form.component.html
+++ b/src/app/auth/broker-auth-page/components/auth-broker-id-form/auth-broker-id-form.component.html
@@ -56,7 +56,9 @@
     class="auth-formId-button"
     type="submit"
     [disabled]="
-      (isSubmitting$ | async) || !checkboxSucces || !this.registrationForm.valid
+      (isBrokerSubmittingById$ | async) ||
+      !checkboxSucces ||
+      !this.registrationForm.valid
     "
   >
     Войти
