--- a/src/app/auth/broker-auth-page/components/broker-auth-page/broker-auth-page.component.html
+++ b/src/app/auth/broker-auth-page/components/broker-auth-page/broker-auth-page.component.html
@@ -12,10 +12,7 @@
         </p>
       </div>
 
-      <app-broker-auth-tabs>
-        <app-auth-email-form emailRegistration></app-auth-email-form>
-        <app-auth-broker-id-form idRegistration></app-auth-broker-id-form>
-      </app-broker-auth-tabs>
+      <app-broker-auth-tabs> </app-broker-auth-tabs>
     </div>
 
     <!-- <p class="">
