fix some routs and ngrx

--- a/src/app/auth/user-auth-page/components/auth-tabs/auth-tabs.component.html
+++ b/src/app/auth/user-auth-page/components/auth-tabs/auth-tabs.component.html
@@ -1,7 +1,11 @@
-<mat-tab-group [disableRipple]="true" mat-align-tabs="center" (selectedTabChange)="onTabChange($event)">
+<mat-tab-group
+  [disableRipple]="true"
+  mat-align-tabs="center"
+  (selectedTabChange)="onTabChange($event)"
+>
   <mat-tab>
     <ng-template mat-tab-label class="tab-item">
-      <img src="../../../../../assets/images/phone.svg" class="tab-item__img" alt="phone">
+      <img src="/assets/images/phone.svg" class="tab-item__img" alt="phone" />
       <span class="tab-item__text">По телефону</span>
     </ng-template>
     <ng-content></ng-content>
@@ -9,14 +13,14 @@
 
   <mat-tab>
     <ng-template mat-tab-label class="tab-item">
-      <img src="../../../../../assets/images/vin.svg" class="tab-item__img" alt="vin">
+      <img src="/assets/images/vin.svg" class="tab-item__img" alt="vin" />
       <span class="tab-item__text">По VIN</span>
     </ng-template>
   </mat-tab>
 
   <mat-tab>
     <ng-template mat-tab-label class="tab-item">
-      <img src="../../../../../assets/images/number.svg" class="tab-item__img" alt="number">
+      <img src="/assets/images/number.svg" class="tab-item__img" alt="number" />
       <span class="tab-item__text">По гос.номеру</span>
     </ng-template>
   </mat-tab>
