--- a/src/app/auth/user-auth-page/components/register/register.component.html
+++ b/src/app/auth/user-auth-page/components/register/register.component.html
@@ -31,7 +31,7 @@
         [disabled]="isSubmitting$ | async"
       >
         Войти
-        <img src="../../../../../assets/images/login_button.svg" alt="login" />
+        <img src="/assets/images/login_button.svg" alt="login" />
       </button>
     </form>
   </app-auth-tabs>
