--- a/src/app/shared/components/counter-button/counter-button.component.html
+++ b/src/app/shared/components/counter-button/counter-button.component.html
@@ -8,7 +8,7 @@
   <input
     type="number"
     class="form-group__item--input"
-    value="initialCounter"
+    value="{{ initialCounter$ | async }}"
     formControlName="counterFormInput"
   />
   <input
