fix some components styles and modals

--- a/src/app/auth/user-filter-page/components/filter/filter.component.html
+++ b/src/app/auth/user-filter-page/components/filter/filter.component.html
@@ -17,5 +17,6 @@
         Отображать всех клиентов
       </label>
     </fieldset>
+    <button (click)="openAddUserModal()">awrsdg</button>
   </main>
 </div>
