--- a/src/app/pages/processing-page/components/summary/summary.component.scss
+++ b/src/app/pages/processing-page/components/summary/summary.component.scss
@@ -37,6 +37,12 @@
       padding: 21px 35px;
       background: linear-gradient(180deg, #d8e1ea 0%, #f1f5fa 100%);
       border-radius: 30px;
+      // border: 3px solid;
+      // border-image: linear-gradient(
+      //   to right rgba(244, 138, 224, 0.45),
+      //   rgba(126, 143, 243, 0.45),
+      //   rgba(79, 191, 214, 0.45)
+      // );
     }
   }
 
