--- a/src/app/shared/components/insurance-policies-modal/insurance-policies-modal.component.html
+++ b/src/app/shared/components/insurance-policies-modal/insurance-policies-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-container">
-  <app-insurance-polices-modal-header></app-insurance-polices-modal-header>
+  <app-modal-header [title]="modalTitle"></app-modal-header>
   <mat-dialog-content>
     <app-insurance-polices-modal-body></app-insurance-polices-modal-body>
   </mat-dialog-content>
