--- a/src/app/pages/processing-page/components/approval/approval.component.scss
+++ b/src/app/pages/processing-page/components/approval/approval.component.scss
@@ -1,11 +1,123 @@
 .container {
   display: flex;
-  padding: 31px 35px;
-  max-width: 100%;
-  width: 80vw;
+  justify-content: space-between;
+  gap: 20px;
+  padding: 0 35px;
   min-height: 80vh;
-  background: #ffffff;
-  box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
-  border-radius: 30px;
   margin-bottom: 75px;
+
+  .loan-container {
+    max-width: 100%;
+    padding: 30px 35px;
+    width: 50vw;
+    background: #ffffff;
+    box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
+    border-radius: 30px;
+
+    .loan-header {
+      max-width: 40%;
+      display: flex;
+      flex-direction: column;
+
+      &__title {
+        font-weight: 400;
+        font-size: 30px;
+        line-height: 39px;
+        color: #343e48;
+        margin-bottom: 22px;
+      }
+
+      &__status {
+        display: flex;
+        color: #ffffff;
+        font-weight: 600;
+        // font-size: 19px;
+        line-height: 38px;
+        background: linear-gradient(173.16deg, #69f6d6 -46.88%, #32d6b0 94.64%);
+        justify-content: center;
+        align-items: center;
+        padding: 15px 15px;
+        border-radius: 30px;
+
+        &--img {
+          margin-right: 10px;
+          width: 24px;
+          height: 24px;
+        }
+      }
+    }
+
+    .loan-body {
+      margin-top: 34px;
+      &__img {
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+
+        &--logo {
+          width: 40px;
+          height: 40px;
+          margin-right: 10px;
+          box-shadow: 2px 2px 19px rgb(52 62 72 / 21%);
+          border-radius: 10px;
+        }
+
+        &--label {
+          font-weight: 500;
+          font-size: 20px;
+          line-height: 24px;
+          display: flex;
+          align-items: center;
+          color: #343e48;
+        }
+      }
+
+      &__title {
+        font-weight: 400;
+        font-size: 26px;
+        line-height: 34px;
+        color: #343e48;
+      }
+
+      &__tagline {
+        margin: 20px 0;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 22px;
+        color: #343e48;
+      }
+
+      &__description {
+        max-width: 90%;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 18px;
+        color: #979797;
+      }
+    }
+
+    .loan-footer {
+      max-width: 50%;
+    }
+  }
+
+  .comments {
+    margin-top: 24px;
+
+    &-title {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 22px;
+      color: #343e48;
+    }
+
+    &-description {
+      margin-top: 10px;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 18px;
+      color: #979797;
+    }
+  }
 }
