--- a/src/app/shared/components/modal-header/modal-header.component.html
+++ b/src/app/shared/components/modal-header/modal-header.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header container">
-  <span class="modal-header__title">Настройка страховых полисов</span>
+  <span class="modal-header__title">{{ title }}</span>
   <button class="modal-header__cancel-button" mat-button mat-dialog-close>
     <mat-icon class="modal-header__cancel-button--img">cancel</mat-icon>
   </button>
