--- a/src/app/pages/calculation-loan-page/components/car-info/car-info.component.scss
+++ b/src/app/pages/calculation-loan-page/components/car-info/car-info.component.scss
@@ -231,6 +231,7 @@
           font-size: 16px;
           line-height: 24px;
           color: #343e48;
+          margin-left: 5px;
       }
     }
 
