--- a/src/app/auth/user-filter-page/components/add-user-modal/add-user-modal.component.html
+++ b/src/app/auth/user-filter-page/components/add-user-modal/add-user-modal.component.html
@@ -1,10 +1,157 @@
 <div class="modal-container">
   <app-modal-header [title]="modalTitle"></app-modal-header>
   <main class="modal-body">
-    <form class="add-user-form" [formGroup]="addUserForm"></form>
+    <form class="add-user-form" [formGroup]="addUserForm">
+      <fieldset class="form-group__item">
+        <label class="form-group__item--label">ФИО</label>
+        <input
+          type="text"
+          formControlName="driver_middle_name"
+          class="form-group__item--input"
+        />
+      </fieldset>
+
+      <fieldset class="form-group__item">
+        <fieldset class="form-group__item">
+          <label class="form-group__item--label">
+            Марка
+            <select
+              (change)="changeCarMark($event)"
+              formControlName="familyStatus"
+              class="form-group__item--select"
+              name="property_status
+          "
+            >
+              <option value="Не женат, не замужем">Не женат, не замужем</option>
+              <option value="У родителей">Холост</option>
+            </select></label
+          >
+        </fieldset>
+      </fieldset>
+
+      <fieldset class="form-group__item">
+        <label class="form-group__item--label">Телефон</label>
+        <input
+          type="text"
+          formControlName="driver_middle_name"
+          class="form-group__item--input"
+        />
+      </fieldset>
+
+      <fieldset class="form-group__item">
+        <label class="form-group__item--label">
+          Модель
+          <select
+            (change)="changeModel($event)"
+            formControlName="familyStatus"
+            class="form-group__item--select"
+            name="property_status
+          "
+          >
+            <option value="Не женат, не замужем">Не женат, не замужем</option>
+            <option value="У родителей">Холост</option>
+          </select></label
+        >
+      </fieldset>
+
+      <fieldset class="form-group__item">
+        <label class="form-group__item--label">Email</label>
+        <input
+          type="text"
+          formControlName="driver_middle_name"
+          class="form-group__item--input"
+        />
+      </fieldset>
+
+      <fieldset class="form-group__item">
+        <label class="form-group__item--label">VIN</label>
+        <input
+          type="text"
+          formControlName="driver_middle_name"
+          class="form-group__item--input"
+        />
+      </fieldset>
+
+      <fieldset class="form-group__item--options">
+        <input
+          type="checkbox"
+          class="form-group__item checkbox"
+          formControlName="passport_chenged"
+          name="checkbox"
+        />
+        <label for="checkbox" class="form-group__item--label">
+          Есть Кредитная программа
+        </label>
+      </fieldset>
+
+      <fieldset class="form-group__item--options">
+        <input
+          type="checkbox"
+          class="form-group__item checkbox"
+          formControlName="passport_chenged"
+          name="checkbox"
+        />
+        <label for="checkbox" class="form-group__item--label">
+          Есть полис КАСКО
+        </label>
+      </fieldset>
+
+      <div class="education">
+        <div class="education__title">Образование</div>
+        <div class="education__list">
+          <button
+            class="education__list--button"
+            *ngFor="let typeOfEducation of educations; index as i"
+            type="button"
+            [ngClass]="{ active: selectedIndex === i }"
+            (click)="activateClass(i)"
+          >
+            {{ typeOfEducation }}
+          </button>
+        </div>
+      </div>
+
+      <fieldset class="form-group__item">
+        <label class="form-group__item--label">
+          Страховая
+          <select
+            (change)="changeInsurer($event)"
+            formControlName="familyStatus"
+            class="form-group__item--select"
+            name="property_status
+        "
+          >
+            <option value="Не женат, не замужем">Не женат, не замужем</option>
+            <option value="У родителей">Холост</option>
+          </select></label
+        >
+      </fieldset>
+
+      <fieldset class="form-group__item">
+        <label class="form-group__item--label">
+          Банк
+          <select
+            (change)="changeBank($event)"
+            formControlName="familyStatus"
+            class="form-group__item--select"
+            name="property_status
+        "
+          >
+            <option value="Не женат, не замужем">Не женат, не замужем</option>
+            <option value="У родителей">Холост</option>
+          </select></label
+        >
+      </fieldset>
+    </form>
   </main>
   <footer class="modal-buttons">
-    <input class="modal-buttons__cancel" type="button" value="Отменить" />
+    <input
+      class="modal-buttons__cancel"
+      type="button"
+      value="Отменить"
+      mat-button
+      mat-dialog-close
+    />
     <input class="modal-buttons__save" type="button" value="Сохранить" />
   </footer>
 </div>
