--- a/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
+++ b/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
@@ -240,9 +240,7 @@
                   formControlName="telematic_misos_light"
                   name="telematic_misos_light"
                 />
-                <img
-                  src="./../../../../../../../assets/images/missos_light_icon.svg"
-                />
+                <img src="/assets/images/missos_light_icon.svg" />
                 <label
                   for="telematic_misos_light"
                   class="car-info-item-telematic__label"
@@ -258,9 +256,7 @@
                   formControlName="telematic_bluelink"
                   name="telematic_bluelink"
                 />
-                <img
-                  src="./../../../../../../../assets/images/bluelink_icon.svg"
-                />
+                <img src="/assets/images/bluelink_icon.svg" />
                 <label
                   for="telematic_bluelink"
                   class="car-info-item-telematic__label"
@@ -276,9 +272,7 @@
                   formControlName="telematic_misos_pro"
                   name="telematic_misos_pro"
                 />
-                <img
-                  src="./../../../../../../../assets/images/misos_pro_icon.svg"
-                />
+                <img src="/assets/images/misos_pro_icon.svg" />
                 <label
                   for="telematic_misos_pro"
                   class="car-info-item-telematic__label"
