--- a/src/app/pages/calculation-loan-page/components/owner/owner.component.scss
+++ b/src/app/pages/calculation-loan-page/components/owner/owner.component.scss
@@ -76,10 +76,11 @@
   width: 100%;
   display: flex;
   gap: 20px;
+
   .previous-kasko,
   .previous-osago {
     height: 8vh;
-    width: 30%;
+    min-width: 30%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -90,7 +91,6 @@
     &__item_label {
       display: flex;
       align-items: center;
-      font-family: 'Gilroy';
       font-style: normal;
       font-weight: 500;
       font-size: 30px;
@@ -176,6 +176,7 @@
 .gender {
   display: flex;
   flex-direction: column;
+  margin-right: 20px;
 
   &__title {
     font-style: normal;
