--- a/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
+++ b/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
@@ -12,18 +12,17 @@
             <label class="car-info-item__label" for="VIN">VIN</label>
             <input
               class="car-info-item__input"
-              id="VIN"
+              name="VIN"
               type="text"
               formControlName="VIN"
             />
             <div
-              class=""
               *ngIf="
                 formCarOptions.controls['VIN'].touched &&
                 formCarOptions.controls['VIN'].invalid
               "
             >
-              <small class="" *ngIf="formCarOptions.controls['VIN'].invalid">
+              <small *ngIf="formCarOptions.controls['VIN'].invalid">
                 Введите VIN</small
               >
             </div>
@@ -32,19 +31,17 @@
             <label class="car-info-item__label" for="car_mark">Марка</label>
             <input
               class="car-info-item__input"
-              id="car_mark"
+              name="car_mark"
               type="text"
               formControlName="car_mark"
             />
             <div
-              class=""
               *ngIf="
                 formCarOptions.controls['car_mark'].touched &&
                 formCarOptions.controls['car_mark'].invalid
               "
             >
               <small
-                class=""
                 *ngIf="formCarOptions.controls['car_mark'].invalid"
               >
                 Введите марку авто</small
@@ -55,19 +52,17 @@
             <label class="car-info-item__label" for="car_model">Модель</label>
             <input
               class="car-info-item__input"
-              id="car_model"
+              name="car_model"
               type="text"
               formControlName="car_model"
             />
             <div
-              class=""
               *ngIf="
                 formCarOptions.controls['car_model'].touched &&
                 formCarOptions.controls['car_model'].invalid
               "
             >
               <small
-                class=""
                 *ngIf="formCarOptions.controls['car_model'].invalid"
               >
                 Введите модель авто</small
@@ -80,19 +75,17 @@
             >
             <input
               class="car-info-item__input"
-              id="car_year"
+              name="car_year"
               type="text"
               formControlName="car_year"
             />
             <div
-              class=""
               *ngIf="
                 formCarOptions.controls['car_year'].touched &&
                 formCarOptions.controls['car_year'].invalid
               "
             >
               <small
-                class=""
                 *ngIf="formCarOptions.controls['car_year'].invalid"
               >
                 Введите год выпуска авто</small
@@ -103,19 +96,17 @@
             <label class="car-info-item__label" for="pts_issue_year">ПТС</label>
             <input
               class="car-info-item__input"
-              id="pts_issue_year"
+              name="pts_issue_year"
               type="text"
               formControlName="pts_issue_year"
             />
             <div
-              class=""
               *ngIf="
                 formCarOptions.controls['pts_issue_year'].touched &&
                 formCarOptions.controls['pts_issue_year'].invalid
               "
             >
               <small
-                class=""
                 *ngIf="formCarOptions.controls['pts_issue_year'].invalid"
               >
                 Введите год выпуска авто из ПТС</small
@@ -128,19 +119,17 @@
             >
             <input
               class="car-info-item__input"
-              id="engine_capacity"
+              name="engine_capacity"
               type="text"
               formControlName="engine_capacity"
             />
             <div
-              class=""
               *ngIf="
                 formCarOptions.controls['engine_capacity'].touched &&
                 formCarOptions.controls['engine_capacity'].invalid
               "
             >
               <small
-                class=""
                 *ngIf="formCarOptions.controls['engine_capacity'].invalid"
               >
                 Введите объем двигателя</small
@@ -153,19 +142,17 @@
             >
             <input
               class="car-info-item__input"
-              id="transmission"
+              name="transmission"
               type="text"
               formControlName="transmission"
             />
             <div
-              class=""
               *ngIf="
                 formCarOptions.controls['transmission'].touched &&
                 formCarOptions.controls['transmission'].invalid
               "
             >
               <small
-                class=""
                 *ngIf="formCarOptions.controls['transmission'].invalid"
               >
                 Выберите тип КПП</small
@@ -200,8 +187,9 @@
             <div class="form-container-toggle__wrapper">
               <label class="toggle-switch">
                 <input
-                  class="checkbox"
                   id="telematic"
+                  class="checkbox"
+                  name="telematic"
                   type="checkbox"
                   formControlName="car_telematic"
                   checked
