--- a/src/app/auth/user-auth-page/components/tes-navigation-logo/tes-navigation-logo.component.scss
+++ b/src/app/auth/user-auth-page/components/tes-navigation-logo/tes-navigation-logo.component.scss
@@ -107,7 +107,7 @@
 
 .logo__sphere__third::before {
   content: '';
-  background: url(../../../../../assets/images/tes_logo.svg) no-repeat;
+  background: url(/assets/images/tes_logo.svg) no-repeat;
   position: absolute;
   top: 50%;
   left: 50%;
