--- a/src/app/pages/processing-page/components/user-info/user-info.component.html
+++ b/src/app/pages/processing-page/components/user-info/user-info.component.html
@@ -1,9 +1,5 @@
 <div class="questionnaire-container">
-  <form
-    [formGroup]="userInfoForm"
-    (ngSubmit)="submitRegistrationForm(userInfoForm)"
-    class="registration"
-  >
+  <form [formGroup]="userInfoForm" class="registration">
     <p class="registration-title">Оформление</p>
 
     <div class="passport-data">
@@ -167,7 +163,7 @@
           "
             >
               <option value="Не женат, не замужем">Не женат, не замужем</option>
-              <option value="У родителей">Холост</option>
+              <option value="Холост">Холост</option>
             </select></label
           >
         </fieldset>
@@ -189,28 +185,19 @@
         <fieldset class="form-group__item">
           <label class="form-group__item--label">
             Обязательные платежи*, ₽
-            <app-input-slider></app-input-slider>
-
-            <!-- <input
-              type="number"
-              min="1"
-              step="any"
-              formControlName="obligatory_payments"
-              class="form-group__item--input"
-          /> -->
+            <app-input-slider
+              (componentValue)="obligatoryPayments($event)"
+            ></app-input-slider>
           </label>
         </fieldset>
 
         <fieldset class="form-group__item">
           <label class="form-group__item--label">
             Погашение кредитов*, ₽
-            <input
-              type="number"
-              min="1"
-              step="any"
-              formControlName="loan_repayment"
-              class="form-group__item--input"
-          /></label>
+            <app-input-slider
+              (componentValue)="loanRepayment($event)"
+            ></app-input-slider
+          ></label>
         </fieldset>
       </div>
     </div>
@@ -225,5 +212,5 @@
     </button>
   </form>
 
-  <button (click)="openInsuranceModal()">Open modal</button>
+  <!-- <button (click)="openInsuranceModal()">Open modal</button> -->
 </div>
