--- a/src/app/pages/processing-page/components/user-info/user-info.component.scss
+++ b/src/app/pages/processing-page/components/user-info/user-info.component.scss
@@ -77,7 +77,9 @@
     .education,
     .family,
     .monthly_expenses {
+      margin-top: 40px;
       &__title {
+        margin-bottom: 35px;
         font-style: normal;
         font-weight: 400;
         font-size: 22px;
